; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-random/src/extr_random.c_mrb_random_mt_rand.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-random/src/extr_random.c_mrb_random_mt_rand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @mrb_random_mt_rand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_random_mt_rand(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @mrb_fixnum(i32 %8)
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @mt_rand_real(i32* %13)
  %15 = call i32 @mrb_float_value(i32* %12, i32 %14)
  store i32 %15, i32* %7, align 4
  br label %23

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @mt_rand(i32* %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @mrb_fixnum(i32 %19)
  %21 = srem i32 %18, %20
  %22 = call i32 @mrb_fixnum_value(i32 %21)
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %16, %11
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @mrb_fixnum(i32) #1

declare dso_local i32 @mrb_float_value(i32*, i32) #1

declare dso_local i32 @mt_rand_real(i32*) #1

declare dso_local i32 @mrb_fixnum_value(i32) #1

declare dso_local i32 @mt_rand(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
